Fixed test call to Freecad - (Task #1)
- fixed issues with calling tests. Were calling pwd.

---
Task #1: Enable Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ jobs:
       if: branch NOT IN (integration_snapshot, development_snapshot) 
       name: Test - FreeCAD Module Tests
       script:
-      - freecad -M "${workspace_loc:virsat4-freecad-mod/}" -t $(pwd)
+      - freecad -M "$(pwd)" -t VirtualSatelliteTest
 
     # -----------------------------------------------------------
     # Deploy Jobs for unsecured Development.
