Try to Call freecad without UI - (Task #1)
- Took that one from the FreeCAD travis.yml

---
Task #1: Enable Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ jobs:
       if: branch NOT IN (integration_snapshot, development_snapshot) 
       name: Test - FreeCAD Module Tests
       script:
-      - freecad -t PartDesignGui
+      - freecad --console --run-test 0
       #- freecad -M "$(pwd)" -t VirtualSatelliteTest
 
     # -----------------------------------------------------------
