Trying to get module running - (Task #1)
- Still not getting module up and running

---
Task #1: Enable Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,11 +62,11 @@ jobs:
     # Run a quicksanity check if all commits are
     # handed in by known users
     #---------------------------------------------
-    - stage: verify
-      if: branch NOT IN (integration_snapshot, development_snapshot) 
-      name: Verify - Authors Sanity Check
-      script:
-      - ./bash/verify_commit_authors.sh known_authors.txt
+#    - stage: verify
+#      if: branch NOT IN (integration_snapshot, development_snapshot) 
+#      name: Verify - Authors Sanity Check
+#      script:
+#      - ./bash/verify_commit_authors.sh known_authors.txt
   
     # -----------------------------------------------------
     # Build and Test - SpotBugs Jobs
@@ -77,8 +77,9 @@ jobs:
       name: Test - FreeCAD Module Tests
       script:
       - VIRTUAL_SATELLITE_MODULE_PATH=$(pwd)
-      - echo "Current module path: ${VIRTUAL_SATELLITE_MODULE_PATH}"
-      - freecad --module-path "${VIRTUAL_SATELLITE_MODULE_PATH}" --console --run-test VirtualSatelliteTest
+      - echo "Current module path " ${VIRTUAL_SATELLITE_MODULE_PATH}"
+      - freecad --module-path ${VIRTUAL_SATELLITE_MODULE_PATH} --console 
+      # - freecad --module-path "${VIRTUAL_SATELLITE_MODULE_PATH}" --console --run-test VirtualSatelliteTest
 
     # -----------------------------------------------------------
     # Deploy Jobs for unsecured Development.
