--- a/.travis.yml
+++ b/.travis.yml
@@ -77,9 +77,7 @@ jobs:
       script:
       - VIRTUAL_SATELLITE_MODULE_PATH=$(pwd)
       - echo "Current module path ${VIRTUAL_SATELLITE_MODULE_PATH}"
-      - freecad -c -t VirtualSatelliteTest
-      - freecad -t VirtualSatelliteTest
-      - freecad -M $(pwd) -c -t VirtualSatelliteTest
+      - freecad -c -t 0
       # - freecad --module-path ${VIRTUAL_SATELLITE_MODULE_PATH} --console 
       # - freecad --module-path "${VIRTUAL_SATELLITE_MODULE_PATH}" --console --run-test VirtualSatelliteTest
 
