--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: python
 python:
   - "3.6"
-dist: trusty
-
-jdk:
-- oraclejdk8
  
 addons:
   # -----------------------------------------------------------
@@ -17,6 +13,8 @@ addons:
   # needed for the SWTBOT UI tests
   # ---------------------------------------------------------------
   apt:
+    sources:
+    - ppa:freecad-maintainers/freecad-stable
     packages:
     - metacity
     - freecad
