Adding Module to test execution - (Task #1)
- Added -M parameter to freecad call

---
Task #1: Enable Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ jobs:
       script:
       - VIRTUAL_SATELLITE_MODULE_PATH=$(pwd)
       - echo "Current module path ${VIRTUAL_SATELLITE_MODULE_PATH}"
-      - freecad -c -t 0
+      - freecad -M $(pwd) -c -t 0
       # - freecad --module-path ${VIRTUAL_SATELLITE_MODULE_PATH} --console 
       # - freecad --module-path "${VIRTUAL_SATELLITE_MODULE_PATH}" --console --run-test VirtualSatelliteTest
 
