--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ jobs:
       script:
       # Install A2plus dependency to FreeCAD
       - mkdir -p ~/.FreeCAD/Mod
-      - curl -L -o ~/.FreeCad/Mod/a2plus.tar.gz ${A2PLUS_REPO}}/archive/${A2PLUS_VERSION}.tar.gz
+      - curl -L -o ~/.FreeCad/Mod/a2plus.tar.gz ${A2PLUS_REPO}/archive/${A2PLUS_VERSION}.tar.gz
       - tar -zxf ~/.FreeCad/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/^
       # Execute FreeCAD tests
       - freecad -M $(pwd) -t TestVirtualSatelliteApp
@@ -86,7 +86,7 @@ jobs:
       script:
       # Install A2plus dependency to FreeCAD
       - mkdir -p ~/.FreeCAD/Mod
-      - curl -L -o ~/.FreeCad/Mod/a2plus.tar.gz ${A2PLUS_REPO}}/archive/${A2PLUS_VERSION}.tar.gz
+      - curl -L -o ~/.FreeCad/Mod/a2plus.tar.gz ${A2PLUS_REPO}/archive/${A2PLUS_VERSION}.tar.gz
       - tar -zxf ~/.FreeCad/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/^
       # Execute FreeCAD tests
       - freecad -M $(pwd) -t 0
