Fixed a typo in script variable - (Task #3)
- changed to A2PLUS from ASPLUS

---
Task #3: Install A2plus before executing tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ env:
   global:
   - VERSION=4.9.0
   - A2PLUS_REPO=https://github.com/kbwbe/A2plus
-  - ASPLUS_VERSION=v0.4.26
+  - A2PLUS_VERSION=v0.4.26
   # ---------------------------------------------
   # API Token for access to github
   # ---------------------------------------------
