--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ jobs:
       script:
       # Install A2plus dependency to FreeCAD
       - curl -L --create-dirs -o ~/.FreeCad/Mod/a2plus.tar.gz ${A2PLUS_REPO}/archive/${A2PLUS_VERSION}.tar.gz
-      - tar -zxf ~/.FreeCad/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/^
+      - tar -zxf ~/.FreeCad/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/
       # Execute FreeCAD tests
       - freecad -M $(pwd) -t TestVirtualSatelliteApp
       
@@ -85,7 +85,7 @@ jobs:
       script:
       # Install A2plus dependency to FreeCAD
       - curl -L --create-dirs -o ~/.FreeCad/Mod/a2plus.tar.gz ${A2PLUS_REPO}/archive/${A2PLUS_VERSION}.tar.gz
-      - tar -zxf ~/.FreeCad/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/^
+      - tar -zxf ~/.FreeCad/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/
       # Execute FreeCAD tests
       - freecad -M $(pwd) -t 0
 
