--- a/.travis.yml
+++ b/.travis.yml
@@ -67,8 +67,8 @@ jobs:
       name: Test - FreeCAD Module Tests
       script:
       # Install A2plus dependency to FreeCAD
-      - curl -L --create-dirs -o ~/.FreeCad/Mod/a2plus.tar.gz ${A2PLUS_REPO}/archive/${A2PLUS_VERSION}.tar.gz
-      - tar -zxf ~/.FreeCad/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/
+      - curl -L --create-dirs -o ~/.FreeCAD/Mod/a2plus.tar.gz ${A2PLUS_REPO}/archive/${A2PLUS_VERSION}.tar.gz
+      - tar -zxf ~/.FreeCAD/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/
       # Execute FreeCAD tests
       - freecad -M $(pwd) -t TestVirtualSatelliteApp
       
@@ -84,8 +84,8 @@ jobs:
       name: Test - FreeCAD All Tests
       script:
       # Install A2plus dependency to FreeCAD
-      - curl -L --create-dirs -o ~/.FreeCad/Mod/a2plus.tar.gz ${A2PLUS_REPO}/archive/${A2PLUS_VERSION}.tar.gz
-      - tar -zxf ~/.FreeCad/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/
+      - curl -L --create-dirs -o ~/.FreeCAD/Mod/a2plus.tar.gz ${A2PLUS_REPO}/archive/${A2PLUS_VERSION}.tar.gz
+      - tar -zxf ~/.FreeCAD/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/
       # Execute FreeCAD tests
       - freecad -M $(pwd) -t 0
 
