--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,8 +4,13 @@ encoding//commands/__init__.py=utf-8
 encoding//commands/command_definitions.py=utf-8
 encoding//commands/command_export.py=utf-8
 encoding//commands/command_import.py=utf-8
+encoding//json_io/__init__.py=utf-8
+encoding//json_io/json_definitions.py=utf-8
+encoding//json_io/json_importer.py=utf-8
 encoding//module/__init__.py=utf-8
 encoding//module/environment.py=utf-8
+encoding//test/__init__.py=utf-8
+encoding//test/test_json_importer.py=utf-8
 encoding/<project>=UTF-8
 encoding/Init.py=utf-8
 encoding/InitGui.py=utf-8
