Improved code and test cases- (Task #5)
- Added test case for part creation
- Implemented parser for parts stored in json
- Added test case for parser as well

---
Task #5: Implement Import Functionality

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -7,10 +7,12 @@ encoding//commands/command_import.py=utf-8
 encoding//json_io/__init__.py=utf-8
 encoding//json_io/json_definitions.py=utf-8
 encoding//json_io/json_importer.py=utf-8
+encoding//json_io/json_part.py=utf-8
 encoding//module/__init__.py=utf-8
 encoding//module/environment.py=utf-8
 encoding//test/__init__.py=utf-8
 encoding//test/test_json_importer.py=utf-8
+encoding//test/test_json_part.py=utf-8
 encoding/<project>=UTF-8
 encoding/Init.py=utf-8
 encoding/InitGui.py=utf-8
