major refactoring - (Task #5)
- changed creation of test directories. test directories are now created
in a separate class.

---
Task #5: Implement Import Functionality

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,8 @@ encoding//commands/__init__.py=utf-8
 encoding//commands/command_definitions.py=utf-8
 encoding//commands/command_export.py=utf-8
 encoding//commands/command_import.py=utf-8
+encoding//freecad/__init__.py=utf-8
+encoding//freecad/active_document_helper.py=utf-8
 encoding//json_io/__init__.py=utf-8
 encoding//json_io/json_definitions.py=utf-8
 encoding//json_io/json_importer.py=utf-8
@@ -18,9 +20,11 @@ encoding//json_io/parts/json_part_sphere.py=utf-8
 encoding//module/__init__.py=utf-8
 encoding//module/environment.py=utf-8
 encoding//test/__init__.py=utf-8
+encoding//test/test_actice_document_helper.py=utf-8
 encoding//test/test_json_importer.py=utf-8
 encoding//test/test_json_part.py=utf-8
 encoding//test/test_json_part_factory.py=utf-8
+encoding//test/test_setup.py=utf-8
 encoding/<project>=UTF-8
 encoding/Init.py=utf-8
 encoding/InitGui.py=utf-8
