--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -16,6 +16,7 @@ encoding//json_io/parts/json_part_cone.py=utf-8
 encoding//json_io/parts/json_part_cylinder.py=utf-8
 encoding//json_io/parts/json_part_factory.py=utf-8
 encoding//json_io/parts/json_part_geometry.py=utf-8
+encoding//json_io/parts/json_part_sheet.py=utf-8
 encoding//json_io/parts/json_part_sphere.py=utf-8
 encoding//module/__init__.py=utf-8
 encoding//module/environment.py=utf-8
@@ -24,6 +25,7 @@ encoding//test/test_actice_document_helper.py=utf-8
 encoding//test/test_json_importer.py=utf-8
 encoding//test/test_json_part.py=utf-8
 encoding//test/test_json_part_factory.py=utf-8
+encoding//test/test_json_part_sheet.py=utf-8
 encoding//test/test_setup.py=utf-8
 encoding/<project>=UTF-8
 encoding/Init.py=utf-8
