Implemented json part cone - (Task #5)
- added object for translating a json cone into a freecad cone
- provided implementation
- defined json to be in freecad standard units

---
Task #5: Implement Import Functionality

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -24,6 +24,8 @@ encoding//test/__init__.py=utf-8
 encoding//test/test_actice_document.py=utf-8
 encoding//test/test_json_importer.py=utf-8
 encoding//test/test_json_part.py=utf-8
+encoding//test/test_json_part_box.py=utf-8
+encoding//test/test_json_part_cone.py=utf-8
 encoding//test/test_json_part_factory.py=utf-8
 encoding//test/test_json_part_sheet.py=utf-8
 encoding//test/test_setup.py=utf-8
