Implemented json part sphere - (Task #5)
- added properties implementation for sphere objects
- added test case
- fixed issue with reocmputation

---
Task #5: Implement Import Functionality

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -29,6 +29,7 @@ encoding//test/test_json_part_cone.py=utf-8
 encoding//test/test_json_part_cylinder.py=utf-8
 encoding//test/test_json_part_factory.py=utf-8
 encoding//test/test_json_part_sheet.py=utf-8
+encoding//test/test_json_part_sphere.py=utf-8
 encoding//test/test_setup.py=utf-8
 encoding/<project>=UTF-8
 encoding/Init.py=utf-8
