--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -28,6 +28,7 @@ encoding//test/test_json_part_box.py=utf-8
 encoding//test/test_json_part_cone.py=utf-8
 encoding//test/test_json_part_cylinder.py=utf-8
 encoding//test/test_json_part_factory.py=utf-8
+encoding//test/test_json_part_geometry.py=utf-8
 encoding//test/test_json_part_sheet.py=utf-8
 encoding//test/test_json_part_sphere.py=utf-8
 encoding//test/test_setup.py=utf-8
