Implemented parsing of product assemblies from json - (Task #5)
- Added class for json product assemblies
- Added class for json product children
- Added test cases for new classes

---
Task #5: Implement Import Functionality

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -20,6 +20,8 @@ encoding//json_io/parts/json_part_geometry.py=utf-8
 encoding//json_io/parts/json_part_sphere.py=utf-8
 encoding//json_io/products/__init__.py=utf-8
 encoding//json_io/products/json_product.py=utf-8
+encoding//json_io/products/json_product_assembly.py=utf-8
+encoding//json_io/products/json_product_child.py=utf-8
 encoding//module/__init__.py=utf-8
 encoding//module/environment.py=utf-8
 encoding//test/__init__.py=utf-8
@@ -35,6 +37,8 @@ encoding//test/json_io/parts/test_json_part_factory.py=utf-8
 encoding//test/json_io/parts/test_json_part_geometry.py=utf-8
 encoding//test/json_io/parts/test_json_part_sphere.py=utf-8
 encoding//test/json_io/products/test_json_product.py=utf-8
+encoding//test/json_io/products/test_json_product_assembly.py=utf-8
+encoding//test/json_io/products/test_json_product_child.py=utf-8
 encoding//test/json_io/test_json_importer.py=utf-8
 encoding//test/json_io/test_json_spread_sheet.py=utf-8
 encoding//test/test_setup.py=utf-8
