Added Logging - (Task #5)
- Try to find reason from TravisCI fails

---
Task #5: Implement Import Functionality

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ before_script:
   - metacity --sm-disable --replace 2> metacity.err &
   
 after_failure:
-  - cat FreeCad.log  
+  - cat FreeCAD.log  
   
 jobs:
   include:
