--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -39,6 +39,7 @@ encoding//test/json_io/parts/test_json_part_sphere.py=utf-8
 encoding//test/json_io/products/test_json_product.py=utf-8
 encoding//test/json_io/products/test_json_product_assembly.py=utf-8
 encoding//test/json_io/products/test_json_product_child.py=utf-8
+encoding//test/json_io/test_json_data.py=utf-8
 encoding//test/json_io/test_json_importer.py=utf-8
 encoding//test/json_io/test_json_spread_sheet.py=utf-8
 encoding//test/test_setup.py=utf-8
