--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,8 @@
 
 	<property name="freeCad.release.windows" value="https://github.com/FreeCAD/FreeCAD/releases/download/0.18.3/FreeCAD-0.18.16131.3129ae4-WIN-x64-portable.7z" />
 	<property name="freeCad.release.linux" value="https://github.com/FreeCAD/FreeCAD/releases/download/0.18.3/FreeCAD-0.18.16131.3129ae4-WIN-x64-portable.7z" />
-	<property name="freeCad.path" value="FreeCAD/" />
+	<!--Extracting into the current directory will unzip into the folder "FreeCAD", existing files will not be deleted-->
+	<property name="freeCad.path" value="." />
 	<property name="freeCad.7z" value="FreeCAD/FreeCAD.7z" />
 
 	<taskdef 
@@ -20,11 +21,15 @@
 	<target name="DownloadFreeCADWindows">
 		<get src="${freeCad.release.windows}" dest="${freeCad.7z}" verbose="true"/>
 	</target>
+	
+	<target name="DownloadFreeCADLinux">
+		<get src="${freeCad.release.linux}" dest="${freeCad.7z}" verbose="true"/>
+	</target>
 
 	<target name="UnzipFreeCAD">
-		
+
 		<comp:un7z xmlns:comp="antlib:org.apache.ant.compress" src="${freeCad.7z}" dest="${freeCad.path}" />
-		
+
 	</target>
 
 </project>
